# FreeAD-DataAcqusitionPipeline-RealWorld

./: .gitignore.swp  README.md  diffbot.urdf  frames_2024-12-10_16.50.02.gv  frames_2024-12-10_17.00.30.gv  keyboard_control.sh  locater.sh  nav.sh  nuscenes_data_collector.sh  online_mapping.sh  output2.urdf  prepare_for_next_data_capturing.sh  setup_hardware.sh
NuscenesData/: ego_pose.json  log.json  map.json  sample_data.json
NuscenesData copy/: map.json
NuscenesData copy/My_Nuscenes/: calibrated_sensor.json
NuscenesData copy/My_Nuscenes/definition_json(backup)/: visibility.json
NuscenesData/My_Nuscenes/: attribute.json  visibility.json
NuscenesData/My_Nuscenes/definition_json(backup)/: calibrated_sensor.json
NuscenesData/can_bus/: can_bus.json
NuscenesData_copy/My_Nuscenes/: calibrated_sensor.json  category.json
NuscenesData_copy/My_Nuscenes/definition_json(backup)/: calibrated_sensor.json  category.json  sensor.json
NuscenesData_copy/maps/expansion/: output_nuscenes_map.json
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/diff_control/lib/diff_control/: serial_bridge_node
install/diff_control/share/diff_control/: diff_control.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/keyboard_control/lib/keyboard_control/: keyboard_control_node
install/keyboard_control/share/keyboard_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/miiboo_imu/lib/miiboo_imu/: imu_read
install/miiboo_imu/share/miiboo_imu/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nuscenes_data_collector/lib/nuscenes_data_collector/: nuscenes_data_collector_issac_node  nuscenes_data_collector_node
install/nuscenes_data_collector/share/nuscenes_data_collector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pointcloud_to_laserscan/include/pointcloud_to_laserscan/: laserscan_to_pointcloud_node.hpp  (+2 more)
install/robot_hardware/include/: hardware_bridge_interface.hpp  hardware_manager.hpp  wheel.hpp
install/serial_comm/share/serial_comm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/serial_comm/share/serial_comm/cmake/: serial_commConfig-version.cmake  serial_commConfig.cmake
install/serial_comm/share/serial_comm/environment/: ament_prefix_path.dsv  path.dsv
install/serial_comm/share/serial_comm/launch/: serial_comm.launch.py  watch_dog.launch.py
launch/: RobotAD.launch.py
log/: latest_build
src/diff_control/: CMakeLists.txt
src/diff_control/hardware/: diffbot_system.cpp
src/keyboard_control/: CMakeLists.txt
src/keyboard_control/launch/: keyboard_control.launch.py
src/keyboard_control/src/: keyboard_control_node.cpp
src/miiboo_imu/src/: imu_read.cpp
src/nuscenes_data_collector/: CMakeLists.txt  README.txt  package.xml
src/nuscenes_data_collector/config/: nuscenes_data_collector_params.yaml  rviz_config.rviz  rviz_config_backup.rviz
src/nuscenes_data_collector/include/nuscenes_data_collector/: camera_bridge.hpp  nuscenes_data_collector.hpp  nuscenes_data_collector_issac.hpp  nuscenes_json_writer.hpp  point_xyzirt.hpp  token_rule.hpp  utils.hpp
src/nuscenes_data_collector/include/nuscenes_data_collector/old/: imu_to_nuscenes.hpp  issac_backup.hpp  issac_data_colector_v1.hpp  issac_sync_backup.hpp  lidar_to_nuscenes.hpp  nuscenes_data_collector(image thread).hpp  nuscenes_data_collector(image topic).hpp  nuscenes_data_collector(no thread, image bridge).hpp  odom_to_nuscenes.hpp  real_world_nuscenes-data_collector_backup
src/nuscenes_data_collector/launch/: launch.py
src/nuscenes_data_collector/launch/old/: CMakeLists.txt  launch.py
src/nuscenes_data_collector/src/: nuscenes_data_collector.cpp  nuscenes_data_collector_issac.cpp
src/nuscenes_data_collector/src/old/: imu_to_nuscenes.cpp  lidar_to_nuscenes.cpp  odom_to_nuscenes.cpp
src/pointcloud_to_laserscan/launch/: sample_pointcloud_to_laserscan_launch.py
src/robot_hardware/: CMakeLists.txt
src/robot_hardware/description/: robot.urdf
src/robot_hardware/include/: wheel.hpp
src/robot_hardware/msg/: HardwareData.msg
src/robot_hardware/src/: hardware_bridge_interface.cpp  hardware_manager.cpp
src/robot_locate/: CMakeLists.txt
src/robot_locate/config/: beifen.yaml  ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
src/robot_locate/description/: sam_bot_description.urdf
src/robot_locate/launch/: online_async_launch.py  robot_locater.launch.py
src/robot_locate/rviz/: urdf_config.rviz
src/rslidar_sdk/config/: config.yaml
src/usb_camera/: CMakeLists.txt  package.xml
src/usb_camera/config/: camera_params.yaml
src/usb_camera/include/usb_camera/: usb_camera.hpp
src/usb_camera/launch/: launch.py
src/usb_camera/src/: usb_camera_node.cpp
tmp/diff_control/: CMakeLists.txt
tmp/hardware/: diffbot_system.cpp
tmp/keyboard_control/src/: keyboard_control_node copy.cpp  keyboard_control_node.cpp  move_bot_cmd.cpp
tmp/msg/: HardwareData.msg
tmp/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
tmp/robot_hardware/config/: controller_config.yaml
tmp/robot_hardware/description/: diffbot_model_our.urdf.xacro
tmp/robot_hardware/include/: hardware_bridge_interface.hpp  hardware_manager.hpp
tmp/robot_hardware/msg/: MotorData.msg
tmp/robot_hardware/resource/: robot_hardware_interface.xml
tmp/robot_locate/config/: mapper_params_online_async.yaml
tmp/robot_locate/launch/: robot_locater.launch.py  robot_test.launch.py
tmp/serial_comm/: CMakeLists.txt
tmp/serial_comm/launch/: serial_comm.launch.py
tmp/serial_comm/src/: serial_node.cpp
tools/: cam_test.py  parse_point_cloude_fileds.py  test.py  vis_point_cloud.py
(+310 files in other folders)
